docs/7.52/md/abenabap_json_abexas.md
---
title: "JSON, Examples"
description: |
  !Example(exa.gif 'Example') JSON, Object Components in JSON-XML(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_xml_abexa.htm) !Example(exa.gif 'Example') JSON, Parse(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_oo_reader_abexa.htm) !Exam
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_abexas.htm"
abapFile: "abenabap_json_abexas.htm"
keywords: ["do", "if", "data", "types", "internal-table", "abenabap", "json", "abexas"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_communication.htm) →  [ABAP and JSON](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json.htm) → 

JSON, Examples

Continue
![Example](exa.gif "Example") [JSON, Object Components in JSON-XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_xml_abexa.htm)
![Example](exa.gif "Example") [JSON, Parse](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_oo_reader_abexa.htm)
![Example](exa.gif "Example") [JSON, Render](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_token_writer_abexa.htm)
![Example](exa.gif "Example") [JSON, Identity Transformation with JSONWriter as Target](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenjson_trafo_id_abexa.htm)
![Example](exa.gif "Example") [JSON, asJSON (General)](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_hello_json_abexa.htm)
![Example](exa.gif "Example") [JSON, asJSON for Elementary ABAP Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_asjson_elem_abexa.htm)
![Example](exa.gif "Example") [JSON, asJSON for Structures](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_asjson_struc_abexa.htm)
![Example](exa.gif "Example") [JSON, asJSON for Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_asjson_table_abexa.htm)
![Example](exa.gif "Example") [JSON, asJSON for Anonymous Data Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_asjson_dref_abexa.htm)
![Example](exa.gif "Example") [JSON, asJSON for Object References](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_asjson_oref_abexa.htm)
![Example](exa.gif "Example") [JSON, asJSON for Additional XML Schema Data Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_asjson_xsd_abexa.htm)
![Example](exa.gif "Example") [JSON, Simple Transformation for Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_st_json_table_abexa.htm)
![Example](exa.gif "Example") [JSON, Simple Transformation for Name Attributes](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_st_json_table_attr_abexa.htm)
![Example](exa.gif "Example") [JSON, Transforming Names](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_names_to_upper_abexa.htm)
![Example](exa.gif "Example") [JSON, Create from XML Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml_to_json_abexa.htm)
![Example](exa.gif "Example") [JSON, Transformation to HTML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_json_to_html_abexa.htm)